NXP-27683: Cleanup / Format